<resources>
<!--******************************************************************-->
    <string name="voiceroom_mic">Microphone</string>
    <string name="voiceroom_earback">In-ear monitor</string>
    <string name="voiceroom_mixer">Mixer</string>
    <string name="voiceroom_mixing">Mixing</string>
    <string name="voiceroom_end">End</string>
    <string name="voiceroom_applying_now">requesting the seat</string>
    <string name="voiceroom_invite_seat">Move a member to speaker</string>
    <string name="voiceroom_mute_seat">Mute</string>
    <string name="voiceroom_close_seat">Close</string>
    <string name="voiceroom_kickout_seat">Move TA to audience</string>
    <string name="voiceroom_open_seat">Open</string>
    <string name="voiceroom_unmute_seat">Unmute</string>
    <string name="voiceroom_cancel">Cancel</string>
    <string name="voiceroom_sure">OK</string>
    <string name="voiceroom_leave_room">leave room</string>
    <string name="voiceroom_apply_micro_has_arrow">Request to speak(%d)</string>
    <string name="voiceroom_open_seat_success">Seat %d is opened</string>
    <string name="voiceroom_open_seat_fail">Seat %d is opened fail</string>
    <string name="voiceroom_close_seat_tip">Seat %d is closed</string>
    <string name="voiceroom_unmute_seat_success">The seat was unmuted</string>
    <string name="voiceroom_unmute_seat_fail">Failed to unmute</string>
    <string name="voiceroom_mute_seat_fail">Failed to mute</string>
    <string name="voiceroom_deny_seat_apply">%s request was rejected</string>
    <string name="voiceroom_seat_mute_tips">The seat is muted, Unable to speak</string>
    <string name="voiceroom_invite_seat_success">Move %s to speaker</string>
    <string name="voiceroom_kickout_seat_success">Move %s to audience</string>
    <string name="voiceroom_seat_already_taken">Seat is already taken</string>
    <string name="voiceroom_seat_already_closed">The seat is closed</string>
    <string name="voiceroom_seat_submited">Request to speak is submitted. Please wait...</string>
    <string name="voiceroom_apply_canceled">Request to speak was cancelled</string>
    <string name="voiceroom_already_leave_seat">You are moved to audience</string>
    <string name="voiceroom_notify">Notification</string>
    <string name="voiceroom_on_seated_tips">You are moved to Seat %d \n You can speak now \n To leave the seat, click your avatar or the Leave button</string>
    <string name="voiceroom_get_it">Got it</string>
    <string name="voiceroom_request_accepted">Request accepted!</string>
    <string name="voiceroom_unmute_seat_tips">The seat is unmuted \n You can speak now</string>
    <string name="voiceroom_kikout_seat_by_host">removed from the seat</string>
    <string name="voiceroom_request_rejected">Your request was rejected</string>
    <string name="voiceroom_seat_muted">The seat is muted, Unable to speak</string>
    <string name="voiceroom_people_online">%s people online</string>
    <string name="voiceroom_host_close_room">The room is dismissed</string>
    <string name="voiceroom_mic_off">Microphone Off</string>
    <string name="voiceroom_mic_on">Microphone On</string>
    <string name="voiceroom_no_mute_members">No muted members~</string>
    <string name="voiceroom_seat">Seat %d</string>
    <string name="voiceroom_enter_room">Enter Room</string>
    <string name="voiceroom_bgm">Background music</string>
    <string name="voiceroom_more">More</string>
    <string name="voiceroom_select_member">Select Member</string>
    <string name="voiceroom_apply_seat_num">%s \t Request to speak(%d)</string>
    <string name="voiceroom_pick_up_has_blank">Hide</string>
    <string name="voiceroom_notice_tips">The app is used for demo purpose only. Commercial use is not allowed.</string>
    <string name="voiceroom_notice">Announcement</string>
    <string name="voiceroom_no_members">No Members</string>
    <string name="voiceroom_loading_fail">load fail</string>
    <string name="voiceroom_net_error">Net error,try again</string>
    <string name="voiceroom_loading">loading...</string>
    <string name="voiceroom_chat_hint">Send a message</string>
    <string name="voiceroom_applause">Applause</string>
    <string name="voiceroom_laughter">laughter</string>
    <string name="voiceroom_earback_tip">Plug in the earphones and you can use the in-ear monitor</string>
    <string name="voiceroom_voice">Voice</string>
    <string name="voiceroom_bnacking">Backing</string>
    <string name="voiceroom_capture_volume">Capture volume</string>
    <string name="voiceroom_confirm_to_cancel">Confirm to cancel the request to speak</string>
    <string name="voiceroom_dowmseat">Move to audience</string>
    <string name="voiceroom_net_disconnected">The device gets disconnected</string>
    <string name="voiceroom_host_close_room_success">Room was dismissed</string>

    <string name="voiceroom_end_live_title">Are you sure you want to end the stream?</string>
    <string name="voiceroom_end_live_tips">End the live stream</string>
    <string name="voiceroom_kickout_seat_sure">Remove</string>
    <string name="voiceroom_seat_request_success">Join request approved</string>
    <string name="voiceroom_seat_applied">The seat is being requested. Try to request for another seat.</string>
    <string name="voiceroom_already_on_seat">You are already a speaker</string>
    <string name="voiceroom_operate_fail">Operation failed</string>
    <string name="voiceroom_chat_message_tips">The chat room info is required</string>
    <string name="voiceroom_mixing_play_error">An error occurred while playing the mixing audio.</string>
    <string name="voiceroom_already_seat">You have taken a seat</string>
    <string name="voiceroom_down_seat">You have left a seat</string>

    <string name="voiceroom_start_live_error">Failed to start the audio room</string>
    <string name="voiceroom_join_live_error">Failed to join the audio room</string>
    <string name="voiceroom_setting">setting</string>
    <string name="voiceroom_audio_effect">effect</string>
    <string name="voiceroom_report">report</string>

    <string name="glow_stick">Glow stick</string>
    <string name="arrange">Arrange</string>
    <string name="sports_car">Sports car</string>
    <string name="rockets">Rockets</string>
    <string name="send_gift">Send gift</string>
    <string name="send">Send</string>
    <string name="send2">Send</string>
    <string name="coin">coins</string>
    <string name="reward_failed">Reward failed</string>
    <string name="donate">donate</string>
    <string name="count">count</string>
    <string name="voiceroom_audio_banned">You are banned,unable to operate!</string>
    <string name="app_content_description_default"> </string>
    <string name="voiceroom_chatroom">chatroom</string>
    <string name="voiceroom_is_closed">Room closed</string>
    <string name="host">host</string>
    <string name="send_to">send to</string>
    <string name="gift_send">send</string>
    <string name="gift_send_memeber_empty">No gift object selected, unable to send gifts</string>
    <string name="voiceroom_chat_room">Voice chat room</string>
    <string name="voiceroom_empty_roomname_tips">The room theme cannot be empty</string>
    <string name="voiceroom_tip">Tip</string>
    <string name="voiceroom_click_create_room_tips">Exit the current room and create a new room</string>
    <string name="voiceroom_click_roomlist_tips">Exit the current room and enter other rooms</string>
    <string name="voiceroom_room_not_exist">Room does not exist</string>
    <string name="voiceroom_people_online2">%d people</string>
    <string name="voiceroom_people_online_ten_thousand">s%w people</string>
    <string name="voiceroom_authentication">Identity Verification</string>
    <string name="voiceroom_authentication_content">Note: \n1. Please enter your authentic identity for verification. \n2. The personal information you submit will stay strictly confidential and will not be used for any other purposes. </string>
    <string name="voiceroom_name_placeholder">Enter your full name</string>
    <string name="voiceroom_id_placeholder">Enter ID number</string>
    <string name="voiceroom_authentication_now">Verify</string>
    <string name="voiceroom_authentication_check">By performing identity verification, you agree to allow CommsEase to collect your personal information, such as real name, ID number and other document information</string>
    <string name="voiceroom_authentication_error">Incorrect ID number or name\n Identity Verification failed</string>
    <string name="voiceroom_authentication_success">Identity Verification passed</string>
    <string name="voiceroom_authentication_know">Got it</string>

</resources>
