<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2022 NetEase, Inc. All rights reserved.
  ~ Use of this source code is governed by a MIT license that can be
  ~ found in the LICENSE file.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <View
        android:background="#F5F5F5"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.netease.yunxin.kit.entertainment.common.widget.TitleBar
        android:id="@+id/title_bar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleBar_title="@string/voiceroom_authentication"
        app:titleBar_title_bg_color="@android:color/white" />

    <TextView
        android:id="@+id/tv_content"
        app:layout_constraintTop_toBottomOf="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/color_333333"
        android:text="@string/voiceroom_authentication_content"/>

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingLeft="11dp"
        android:paddingRight="11dp"
        android:background="@drawable/bg_circle_rect"
        android:singleLine="true"
        android:hint="@string/voiceroom_name_placeholder"
        android:textColorHint="@color/color_b0b6be"
        android:textSize="16sp"
        android:textColor="@color/color_333333" />

    <EditText
        android:id="@+id/et_id"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/et_name"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingLeft="11dp"
        android:paddingRight="11dp"
        android:background="@drawable/bg_circle_rect"
        android:singleLine="true"
        android:maxLength="18"
        android:textAllCaps="true"
        android:hint="@string/voiceroom_id_placeholder"
        android:textColorHint="@color/color_b0b6be"
        android:textSize="16sp"
        android:textColor="@color/color_333333" />

    <Button
        android:id="@+id/btn_submit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_id"
        android:layout_marginTop="20dp"
        android:text="@string/voiceroom_authentication_now"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:enabled="false"
        android:background="@drawable/bg_submit"
        android:textSize="16sp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btn_submit"
        app:layout_constraintLeft_toLeftOf="@+id/btn_submit"
        android:layout_marginTop="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/check_box"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="start"
            android:theme="@style/CheckBox"
            android:scaleX="0.8"
            android:scaleY="0.8" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/voiceroom_authentication_check"
            android:textColor="@color/color_999999" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>